@@ -1,23 +1,28 @@
 package S13P31A306.loglens.domain.log.service.impl;
 
 import S13P31A306.loglens.domain.log.constants.LogErrorCode;
+import S13P31A306.loglens.domain.log.dto.ai.AiAnalysisDto;
+import S13P31A306.loglens.domain.log.dto.ai.AiAnalysisResponse;
 import S13P31A306.loglens.domain.log.dto.internal.LogSearchResult;
 import S13P31A306.loglens.domain.log.dto.internal.TraceLogSearchResult;
 import S13P31A306.loglens.domain.log.dto.request.LogSearchRequest;
+import S13P31A306.loglens.domain.log.dto.response.LogDetailResponse;
 import S13P31A306.loglens.domain.log.dto.response.LogPageResponse;
 import S13P31A306.loglens.domain.log.dto.response.LogResponse;
 import S13P31A306.loglens.domain.log.dto.response.PaginationResponse;
 import S13P31A306.loglens.domain.log.dto.response.TraceLogResponse;
+import S13P31A306.loglens.domain.log.entity.Log;
 import S13P31A306.loglens.domain.log.mapper.LogMapper;
 import S13P31A306.loglens.domain.log.repository.LogRepository;
 import S13P31A306.loglens.domain.log.service.LogService;
+import S13P31A306.loglens.global.client.AiServiceClient;
 import S13P31A306.loglens.global.exception.BusinessException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -32,6 +37,7 @@ public class LogServiceImpl implements LogService {
     private final LogRepository logRepository;
     private final LogMapper logMapper;
     private final ObjectMapper objectMapper; // For cursor encoding/decoding
+    private final AiServiceClient aiServiceClient;
 
     @Override
     public LogPageResponse getLogs(LogSearchRequest request) {
@@ -93,13 +99,13 @@ public class LogServiceImpl implements LogService {
     private List<LogResponse> mapToLogResponses(LogSearchResult result) {
         return result.logs().stream()
                 .map(logMapper::toLogResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<LogResponse> mapToLogResponses(TraceLogSearchResult result) {
         return result.logs().stream()
                 .map(logMapper::toLogResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private PaginationResponse createPaginationResponse(LogSearchResult result) {
@@ -129,5 +135,87 @@ public class LogServiceImpl implements LogService {
             log.error("{} 커서 인코딩 실패: sortValues={}", LOG_PREFIX, sortValues, e);
             throw new BusinessException(LogErrorCode.CURSOR_ENCODING_FAILED, null, e);
         }
+    }
+
+    @Override
+    public LogDetailResponse getLogDetail(Long logId, String projectUuid) {
+        log.info("{} 로그 상세 조회 시작: logId={}, projectUuid={}", LOG_PREFIX, logId, projectUuid);
+
+        // 1. OpenSearch에서 로그 조회
+        Log logEntity = logRepository.findByLogId(logId, projectUuid)
+                .orElseThrow(() -> {
+                    log.warn("{} 로그를 찾을 수 없음: logId={}, projectUuid={}",
+                            LOG_PREFIX, logId, projectUuid);
+                    return new BusinessException(LogErrorCode.LOG_NOT_FOUND);
+                });
+
+        // 2. 기본 로그 정보로 LogDetailResponse 빌드 시작
+        LogDetailResponse.LogDetailResponseBuilder builder = LogDetailResponse.builder()
+                .logId(logEntity.getLogId())
+                .traceId(logEntity.getTraceId())
+                .logLevel(logEntity.getLogLevel())
+                .sourceType(logEntity.getSourceType())
+                .message(logEntity.getMessage())
+                .timestamp(
+                        !Objects.isNull(logEntity.getTimestamp()) ? logEntity.getTimestamp().toLocalDateTime() : null)
+                .logger(logEntity.getLogger())
+                .layer(logEntity.getLayer())
+                .comment(logEntity.getComment())
+                .serviceName(logEntity.getServiceName())
+                .className(logEntity.getClassName())
+                .methodName(logEntity.getMethodName())
+                .threadName(logEntity.getThreadName())
+                .requesterIp(logEntity.getRequesterIp())
+                .duration(logEntity.getDuration())
+                .stackTrace(logEntity.getStackTrace())
+                .logDetails(logEntity.getLogDetails());
+
+        // 3. AI 분석 결과 확인 및 처리
+        AiAnalysisDto analysis = null;
+        Boolean fromCache = null;
+        Long similarLogId = null;
+        Double similarityScore = null;
+
+        // 3-1. OpenSearch에 저장된 aiAnalysis 확인
+        Map<String, Object> aiAnalysisMap = logEntity.getAiAnalysis();
+        if (aiAnalysisMap != null && !aiAnalysisMap.isEmpty()) {
+            log.info("{} OpenSearch에 저장된 AI 분석 결과 사용: logId={}", LOG_PREFIX, logId);
+            try {
+                analysis = objectMapper.convertValue(aiAnalysisMap, AiAnalysisDto.class);
+                fromCache = true;
+            } catch (Exception e) {
+                log.error("{} AI 분석 결과 변환 실패: logId={}", LOG_PREFIX, logId, e);
+            }
+        }
+
+        // 3-2. AI 분석이 없으면 AI 서비스 호출
+        if (Objects.isNull(analysis)) {
+            log.info("{} AI 서비스 호출하여 분석 수행: logId={}", LOG_PREFIX, logId);
+            try {
+                AiAnalysisResponse aiResponse = aiServiceClient.analyzeLog(logId, projectUuid);
+                if (aiResponse != null && aiResponse.getAnalysis() != null) {
+                    analysis = aiResponse.getAnalysis();
+                    fromCache = aiResponse.getFromCache();
+                    similarLogId = aiResponse.getSimilarLogId();
+                    similarityScore = aiResponse.getSimilarityScore();
+                    log.info("{} AI 분석 완료: logId={}, fromCache={}", LOG_PREFIX, logId, fromCache);
+                } else {
+                    log.warn("{} AI 분석 결과가 null: logId={}", LOG_PREFIX, logId);
+                }
+            } catch (Exception e) {
+                log.error("{} AI 서비스 호출 실패, 분석 없이 로그만 반환: logId={}", LOG_PREFIX, logId, e);
+            }
+        }
+
+        // 4. AI 분석 결과를 포함한 응답 반환
+        LogDetailResponse response = builder
+                .analysis(analysis)
+                .fromCache(fromCache)
+                .similarLogId(similarLogId)
+                .similarityScore(similarityScore)
+                .build();
+
+        log.info("{} 로그 상세 조회 완료: logId={}, hasAnalysis={}", LOG_PREFIX, logId, analysis != null);
+        return response;
     }
 }
